# emulator

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  cabal.project  cabal.project.freeze  cabal.project.local  emulator.cabal  lite.cabal  utils.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/actions/postgres/: action.yml
.github/workflows/: build.yml  release.yml  static_binary.yml
benchmarks/: Benchmarks.hs
examples/: config.yml
src/: Lib.hs  Main.hs  Projector.hs  Queue.hs
src/Ambar/: Emulator.hs  Record.hs  Transport.hs
src/Ambar/Emulator/: Config.hs  Connector.hs  Projector.hs  Queue.hs  Server.hs
src/Ambar/Emulator/Connector/: File.hs  MicrosoftSQLServer.hs  MySQL.hs  Poll.hs  Postgres.hs
src/Ambar/Emulator/Queue/: Partition.hs  Topic.hs
src/Ambar/Emulator/Queue/Partition/: File.hs  STMReader.hs
src/Ambar/Lite/: Projector.hs  Queue.hs
src/Ambar/Lite/Connector/: Poll.hs  Postgres.hs
src/Ambar/Lite/Queue/: Partition.hs  Topic.hs
src/Ambar/Lite/Queue/Partition/: File.hs  STMReader.hs
src/Ambar/Record/: Encoding.hs
src/Ambar/Transport/: File.hs  Http.hs
src/Connector/: Poll.hs  Postgres.hs  SQL.hs
src/Control/Concurrent/: Mutex.hs
src/Data/: Some.hs
src/Database/: MicrosoftSQLServer.hs  MySQL.hs
src/Lite/: Projector.hs  Queue.hs
src/Lite/Connector/: Poll.hs  Postgres.hs
src/Lite/Queue/: Partition.hs  Topic.hs
src/Lite/Queue/Partition/: File.hs  STMReader.hs
src/Queue/: Partition.hs  Topic.hs
src/Queue/Partition/: File.hs  STMReader.hs
src/Utils/: Async.hs  Delay.hs  Directory.hs  Exception.hs  Logger.hs  Prettyprinter.hs  STM.hs  Some.hs  Thread.hs  Warden.hs
tests/: Tests.hs  test.sh
tests/Test/: Config.hs  Connector.hs  Emulator.hs  OnDemand.hs  Projector.hs  Queue.hs  Transport.hs  Warden.hs
tests/Test/Connector/: File.hs  MicrosoftSQLServer.hs  MySQL.hs  PostgreSQL.hs
tests/Test/Util/: SQL.hs
tests/Test/Utils/: Docker.hs  OnDemand.hs  SQL.hs  Tests.hs
