cabal-version:      2.4
name:               emulator
version:            0.1.0.0
synopsis:           Ambar in a box.
description:        Connect your databases to multiple consumers with minimal configuration and no libraries needed.
author:             Ambar Cloud LTD.
maintainer:         enginnering@ambar.cloud

common common
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RecordWildCards
        TypeFamilies
        TypeFamilyDependencies
        DeriveAnyClass

executable emulator
    import: common
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    main-is:          src/Main.hs
    other-modules:
    build-depends:
        base ^>=4.17.2.1
        , directory
        , emulator-lib
        , filepath
        , prettyprinter
        , prettyprinter-ansi-terminal
        , optparse-applicative

library emulator-lib
    import: common
    ghc-options: -Wall -Werror -fprof-auto
    hs-source-dirs: src
    exposed-modules:
        Ambar.Emulator
        Ambar.Emulator.Config
        Ambar.Emulator.Connector.File
        Ambar.Emulator.Connector.Poll
        Ambar.Emulator.Connector.Postgres
        Ambar.Emulator.Projector
        Ambar.Emulator.Queue
        Ambar.Emulator.Queue.Topic
        Ambar.Emulator.Queue.Partition
        Ambar.Emulator.Queue.Partition.File
        Ambar.Emulator.Queue.Partition.STMReader
        Ambar.Transport
        Ambar.Transport.Http
        Ambar.Transport.File
        Utils.Async
        Utils.Delay
        Utils.Logger
        Utils.Prettyprinter
        Utils.STM
        Utils.Some
    build-depends:
        base ^>=4.17.2.1
        , aeson
        , aeson-pretty
        , async
        , base64
        , bytestring
        , binary
        , casing
        , containers
        , directory
        , extra
        , filepath
        , hashable
        , http-client
        , http-client-tls ==0.3.6.3
        , http-types
        , postgresql-simple
        , prettyprinter
        , random
        , stm
        , text
        , time
        , unordered-containers
        , yaml

test-suite emulator-tests
    import: common
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    hs-source-dirs: tests
    main-is: Tests.hs
    other-modules:
        Test.Config
        Test.Queue
        Test.Connector
        Test.Utils.Tests
        Test.Utils.OnDemand
    type:    exitcode-stdio-1.0
    build-depends:
        base ^>=4.17.2.1
        , emulator-lib
        , aeson
        , async
        , bytestring
        , containers
        , directory
        , filepath
        , hspec
        , hspec-expectations
        , HUnit
        , postgresql-simple
        , process
        , QuickCheck
        , stm
        , string-interpolate
        , temporary
        , text
        , unordered-containers

benchmark emulator-bench
  import: common
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  type:    exitcode-stdio-1.0
  main-is: benchmarks/Benchmarks.hs
  build-depends:
        base ^>=4.17.2.1
        , emulator-lib
        , async
        , bytestring
        , criterion
        , temporary
        , text
        , time
        , unordered-containers
