cabal-version:      2.4
name:               lite
version:            0.1.0.0
synopsis:           Ambar in a box.
description:        Connect your databases to multiple consumers with minimal configuration and no libraries needed.
author:             Ambar Cloud LTD.
maintainer:         enginnering@ambar.cloud

common common
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        TypeFamilies
        TypeFamilyDependencies
        RecordWildCards
        InstanceSigs
        DerivingStrategies
        GeneralizedNewtypeDeriving
        TypeApplications
        RankNTypes
        NumericUnderscores
        BangPatterns
        LambdaCase
        TupleSections
        ExistentialQuantification

executable lite
    import: common
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    main-is:          src/Main.hs
    other-modules:
    build-depends:
        base ^>=4.17.2.1
        , lite-lib
        , prettyprinter
        , prettyprinter-ansi-terminal
        , optparse-applicative

library lite-lib
    import: common
    ghc-options: -Wall -Werror -fprof-auto
    hs-source-dirs: src
    exposed-modules:
        Queue
        Queue.Topic
        Queue.Partition
        Queue.Partition.File
    build-depends:
        base ^>=4.17.2.1
        , async
        , bytestring
        , binary
        , containers
        , directory
        , extra
        , filepath
        , hashable
        , random
        , stm
        , text
        , time
        , unagi-chan
        , unordered-containers

test-suite lite-tests
    import: common
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    hs-source-dirs: tests
    main-is: Tests.hs
    other-modules:
        Test.Queue
    type:    exitcode-stdio-1.0
    build-depends:
        base ^>=4.17.2.1
        , lite-lib
        , async
        , bytestring
        , directory
        , filepath
        , hspec
        , HUnit
        , QuickCheck
        , temporary
        , text

benchmark lite-bench
  import: common
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  type:    exitcode-stdio-1.0
  main-is: benchmarks/Benchmarks.hs
  build-depends:
        base ^>=4.17.2.1
        , lite-lib
        , async
        , bytestring
        , criterion
        , temporary
        , text
        , time
