cabal-version:      2.4
name:               lite
version:            0.1.0.0
synopsis:           Ambar in a box.
description:        Connect your databases to multiple consumers with minimal configuration and no libraries needed.
author:             Ambar Cloud LTD.
maintainer:         enginnering@ambar.cloud

common common
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        ExistentialQuantification
        GeneralizedNewtypeDeriving
        InstanceSigs
        LambdaCase
        NumericUnderscores
        OverloadedStrings
        RankNTypes
        RecordWildCards
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies
        MultiParamTypeClasses

executable lite
    import: common
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    main-is:          src/Main.hs
    other-modules:
    build-depends:
        base ^>=4.17.2.1
        , lite-lib
        , prettyprinter
        , prettyprinter-ansi-terminal
        , optparse-applicative

library lite-lib
    import: common
    ghc-options: -Wall -Werror -fprof-auto
    hs-source-dirs: src
    exposed-modules:
        Ambar.Lite.Connector.Poll
        Ambar.Lite.Connector.Postgres
        Ambar.Lite.Projector
        Ambar.Lite.Queue
        Ambar.Lite.Queue.Topic
        Ambar.Lite.Queue.Partition
        Ambar.Lite.Queue.Partition.File
        Ambar.Lite.Queue.Partition.STMReader
        Utils.Async
        Utils.Delay
        Utils.STM
        Utils.Some
    build-depends:
        base ^>=4.17.2.1
        , aeson
        , aeson-pretty
        , async
        , base64
        , bytestring
        , binary
        , containers
        , directory
        , extra
        , filepath
        , hashable
        , postgresql-simple
        , prettyprinter
        , random
        , stm
        , text
        , time
        , unordered-containers

test-suite lite-tests
    import: common
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    hs-source-dirs: tests
    main-is: Tests.hs
    other-modules:
        Test.Queue
        Test.Connector
        Test.Utils.Tests
        Test.Utils.OnDemand
    type:    exitcode-stdio-1.0
    build-depends:
        base ^>=4.17.2.1
        , lite-lib
        , aeson
        , async
        , bytestring
        , containers
        , directory
        , filepath
        , hspec
        , hspec-expectations
        , HUnit
        , postgresql-simple
        , process
        , QuickCheck
        , stm
        , temporary
        , text
        , unordered-containers

benchmark lite-bench
  import: common
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  type:    exitcode-stdio-1.0
  main-is: benchmarks/Benchmarks.hs
  build-depends:
        base ^>=4.17.2.1
        , lite-lib
        , async
        , bytestring
        , criterion
        , temporary
        , text
        , time
        , unordered-containers
